lua/Kelson.Lua/Kelson.Lua.Antlr/LuaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Lua.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class LuaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, NAME=56, NORMALSTRING=57, CHARSTRING=58, 
		LONGSTRING=59, INT=60, HEX=61, FLOAT=62, HEX_FLOAT=63, COMMENT=64, LINE_COMMENT=65, 
		WS=66, SHEBANG=67;
	public const int
		RULE_chunk = 0, RULE_block = 1, RULE_stat = 2, RULE_stat_empty = 3, RULE_stat_globalassign = 4, 
		RULE_stat_functioncall = 5, RULE_stat_label = 6, RULE_stat_break = 7, 
		RULE_stat_goto = 8, RULE_stat_do = 9, RULE_stat_while = 10, RULE_stat_repeat = 11, 
		RULE_stat_if = 12, RULE_stat_fornum = 13, RULE_stat_foriter = 14, RULE_stat_functiondef = 15, 
		RULE_stat_localfunctiondef = 16, RULE_stat_localassignment = 17, RULE_retstat = 18, 
		RULE_label = 19, RULE_funcname = 20, RULE_varlist = 21, RULE_namelist = 22, 
		RULE_explist = 23, RULE_exp = 24, RULE_exp_nil = 25, RULE_exp_bool = 26, 
		RULE_exp_number = 27, RULE_exp_string = 28, RULE_exp_params = 29, RULE_exp_functiondef = 30, 
		RULE_exp_prefixexp = 31, RULE_exp_tableconstructor = 32, RULE_exp_unary = 33, 
		RULE_binaryop = 34, RULE_prefixexp = 35, RULE_functioncall = 36, RULE_varOrExp = 37, 
		RULE_var = 38, RULE_varSuffix = 39, RULE_nameAndArgs = 40, RULE_args = 41, 
		RULE_functiondef = 42, RULE_funcbody = 43, RULE_parlist = 44, RULE_tableconstructor = 45, 
		RULE_fieldlist = 46, RULE_field = 47, RULE_fieldsep = 48, RULE_operatorOr = 49, 
		RULE_operatorAnd = 50, RULE_operatorComparison = 51, RULE_operatorStrcat = 52, 
		RULE_operatorAddSub = 53, RULE_operatorMulDivMod = 54, RULE_operatorBitwise = 55, 
		RULE_operatorUnary = 56, RULE_operatorPower = 57, RULE_number = 58, RULE_string = 59;
	public static readonly string[] ruleNames = {
		"chunk", "block", "stat", "stat_empty", "stat_globalassign", "stat_functioncall", 
		"stat_label", "stat_break", "stat_goto", "stat_do", "stat_while", "stat_repeat", 
		"stat_if", "stat_fornum", "stat_foriter", "stat_functiondef", "stat_localfunctiondef", 
		"stat_localassignment", "retstat", "label", "funcname", "varlist", "namelist", 
		"explist", "exp", "exp_nil", "exp_bool", "exp_number", "exp_string", "exp_params", 
		"exp_functiondef", "exp_prefixexp", "exp_tableconstructor", "exp_unary", 
		"binaryop", "prefixexp", "functioncall", "varOrExp", "var", "varSuffix", 
		"nameAndArgs", "args", "functiondef", "funcbody", "parlist", "tableconstructor", 
		"fieldlist", "field", "fieldsep", "operatorOr", "operatorAnd", "operatorComparison", 
		"operatorStrcat", "operatorAddSub", "operatorMulDivMod", "operatorBitwise", 
		"operatorUnary", "operatorPower", "number", "string"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'='", "'break'", "'goto'", "'do'", "'end'", "'while'", "'repeat'", 
		"'until'", "'if'", "'then'", "'elseif'", "'else'", "'for'", "','", "'in'", 
		"'function'", "'local'", "'return'", "'::'", "'.'", "':'", "'nil'", "'false'", 
		"'true'", "'...'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'or'", "'and'", 
		"'<'", "'>'", "'<='", "'>='", "'~='", "'=='", "'..'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'//'", "'&'", "'|'", "'~'", "'<<'", "'>>'", "'not'", "'#'", 
		"'^'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "NAME", "NORMALSTRING", 
		"CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", 
		"LINE_COMMENT", "WS", "SHEBANG"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Lua.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static LuaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LuaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LuaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ChunkContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(LuaParser.Eof, 0); }
		public ChunkContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chunk; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterChunk(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitChunk(this);
		}
	}

	[RuleVersion(0)]
	public ChunkContext chunk() {
		ChunkContext _localctx = new ChunkContext(Context, State);
		EnterRule(_localctx, 0, RULE_chunk);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120; block();
			State = 121; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public RetstatContext retstat() {
			return GetRuleContext<RetstatContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__19) | (1L << T__26) | (1L << NAME))) != 0)) {
				{
				{
				State = 123; stat();
				}
				}
				State = 128;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 130;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__18) {
				{
				State = 129; retstat();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public Stat_emptyContext stat_empty() {
			return GetRuleContext<Stat_emptyContext>(0);
		}
		public Stat_globalassignContext stat_globalassign() {
			return GetRuleContext<Stat_globalassignContext>(0);
		}
		public Stat_functioncallContext stat_functioncall() {
			return GetRuleContext<Stat_functioncallContext>(0);
		}
		public Stat_labelContext stat_label() {
			return GetRuleContext<Stat_labelContext>(0);
		}
		public Stat_breakContext stat_break() {
			return GetRuleContext<Stat_breakContext>(0);
		}
		public Stat_gotoContext stat_goto() {
			return GetRuleContext<Stat_gotoContext>(0);
		}
		public Stat_doContext stat_do() {
			return GetRuleContext<Stat_doContext>(0);
		}
		public Stat_whileContext stat_while() {
			return GetRuleContext<Stat_whileContext>(0);
		}
		public Stat_repeatContext stat_repeat() {
			return GetRuleContext<Stat_repeatContext>(0);
		}
		public Stat_ifContext stat_if() {
			return GetRuleContext<Stat_ifContext>(0);
		}
		public Stat_fornumContext stat_fornum() {
			return GetRuleContext<Stat_fornumContext>(0);
		}
		public Stat_foriterContext stat_foriter() {
			return GetRuleContext<Stat_foriterContext>(0);
		}
		public Stat_functiondefContext stat_functiondef() {
			return GetRuleContext<Stat_functiondefContext>(0);
		}
		public Stat_localfunctiondefContext stat_localfunctiondef() {
			return GetRuleContext<Stat_localfunctiondefContext>(0);
		}
		public Stat_localassignmentContext stat_localassignment() {
			return GetRuleContext<Stat_localassignmentContext>(0);
		}
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterStat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitStat(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(Context, State);
		EnterRule(_localctx, 4, RULE_stat);
		try {
			State = 147;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 132; stat_empty();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 133; stat_globalassign();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 134; stat_functioncall();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 135; stat_label();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 136; stat_break();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 137; stat_goto();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 138; stat_do();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 139; stat_while();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 140; stat_repeat();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 141; stat_if();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 142; stat_fornum();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 143; stat_foriter();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 144; stat_functiondef();
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 145; stat_localfunctiondef();
				}
				break;
			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 146; stat_localassignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stat_emptyContext : ParserRuleContext {
		public Stat_emptyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat_empty; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterStat_empty(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitStat_empty(this);
		}
	}

	[RuleVersion(0)]
	public Stat_emptyContext stat_empty() {
		Stat_emptyContext _localctx = new Stat_emptyContext(Context, State);
		EnterRule(_localctx, 6, RULE_stat_empty);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 149; Match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stat_globalassignContext : ParserRuleContext {
		public VarlistContext varlist() {
			return GetRuleContext<VarlistContext>(0);
		}
		public ExplistContext explist() {
			return GetRuleContext<ExplistContext>(0);
		}
		public Stat_globalassignContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat_globalassign; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterStat_globalassign(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitStat_globalassign(this);
		}
	}

	[RuleVersion(0)]
	public Stat_globalassignContext stat_globalassign() {
		Stat_globalassignContext _localctx = new Stat_globalassignContext(Context, State);
		EnterRule(_localctx, 8, RULE_stat_globalassign);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 151; varlist();
			State = 152; Match(T__1);
			State = 153; explist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stat_functioncallContext : ParserRuleContext {
		public FunctioncallContext functioncall() {
			return GetRuleContext<FunctioncallContext>(0);
		}
		public Stat_functioncallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat_functioncall; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterStat_functioncall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitStat_functioncall(this);
		}
	}

	[RuleVersion(0)]
	public Stat_functioncallContext stat_functioncall() {
		Stat_functioncallContext _localctx = new Stat_functioncallContext(Context, State);
		EnterRule(_localctx, 10, RULE_stat_functioncall);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155; functioncall();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stat_labelContext : ParserRuleContext {
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public Stat_labelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat_label; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterStat_label(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitStat_label(this);
		}
	}

	[RuleVersion(0)]
	public Stat_labelContext stat_label() {
		Stat_labelContext _localctx = new Stat_labelContext(Context, State);
		EnterRule(_localctx, 12, RULE_stat_label);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 157; label();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stat_breakContext : ParserRuleContext {
		public Stat_breakContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat_break; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterStat_break(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitStat_break(this);
		}
	}

	[RuleVersion(0)]
	public Stat_breakContext stat_break() {
		Stat_breakContext _localctx = new Stat_breakContext(Context, State);
		EnterRule(_localctx, 14, RULE_stat_break);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 159; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stat_gotoContext : ParserRuleContext {
		public ITerminalNode NAME() { return GetToken(LuaParser.NAME, 0); }
		public Stat_gotoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat_goto; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterStat_goto(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitStat_goto(this);
		}
	}

	[RuleVersion(0)]
	public Stat_gotoContext stat_goto() {
		Stat_gotoContext _localctx = new Stat_gotoContext(Context, State);
		EnterRule(_localctx, 16, RULE_stat_goto);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 161; Match(T__3);
			State = 162; Match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stat_doContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public Stat_doContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat_do; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterStat_do(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitStat_do(this);
		}
	}

	[RuleVersion(0)]
	public Stat_doContext stat_do() {
		Stat_doContext _localctx = new Stat_doContext(Context, State);
		EnterRule(_localctx, 18, RULE_stat_do);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 164; Match(T__4);
			State = 165; block();
			State = 166; Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Stat_whileContext : ParserRuleContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public Stat_whileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat_while; } }
		public override void EnterRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.EnterStat_while(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ILuaListener typedListener = listener as ILuaListener;
			if (typedListener != null) typedListener.ExitStat_while(this);
		}
	}

	[RuleVersion(0)]
	public Stat_whileContext stat_while() {
		Stat_whileContext _localctx = new Stat_whileContext(Context, State);
		EnterRule(_localctx, 20, RULE_stat_while);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 168; Match(T__6);
			State = 169; exp(0);
			State = 170; Match(T__4);
			State = 171; block();
			State = 172; Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
